--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>CardEditor</title>
-  <base href="https://scorpion1122.github.io/rpg-cards/">
+  <base href="https://scorpion1122.github.io/CardEditor/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
