--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <meta name="google-signin-client_id" content="943843811626-ns0adflrr48c2drjh4fhp112ctl8i0fh.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+
 </head>
 <body>
   <app-root></app-root>
